# wx-gha-ci

./: CMakeLists.txt  LICENSE  README.md  hello.cpp
.github/workflows/: conda-cmake.yml
